# smart-home

./: LICENSE
central_unit/: .gitignore  CMakeLists.txt  CMakePresets.json
central_unit/cmake/: rpi_zero_2w_toolchain.cmake
central_unit/configs/: db-service.env.example  db-service.yaml  mediator.yaml  smart_home.yaml  web-server.env.example  web-server.yaml
central_unit/database/: smart_home_schema.sql
central_unit/docs/: Doxyfile  namespaces.h
central_unit/scripts/: install.sh
central_unit/src/: CMakeLists.txt  main.cpp  module_mediator.cpp  smart_home_config.cpp  smart_home_config.h  smart_home_core.cpp  smart_home_core.h  smart_home_tcp_server.cpp  smart_home_tcp_server.h
central_unit/src/cli/: CMakeLists.txt  main.cpp  main.h
central_unit/src/common/: CMakeLists.txt  types.h
central_unit/src/common/api/: api.cpp  api.h
central_unit/src/common/constants/: constants.h
central_unit/src/common/ipc/: socket_client.cpp  socket_client.h  socket_connection.cpp  socket_connection.h  socket_server.cpp  socket_server.h  socket_server_connection.cpp  socket_server_connection.h
central_unit/src/common/ipc/tcp/: tcp_connection.cpp  tcp_connection.h  tcp_server.cpp  tcp_server.h
central_unit/src/common/logger/: async_logger.tpp  logger.cpp  logger.h  logger.tpp
central_unit/src/common/utils/: config.cpp  config.h  config.tpp  config_manager.cpp  config_manager.h  config_manager.tpp  exceptions.hpp  utils.cpp  utils.h
central_unit/src/common/utils/config_manager/: config_manager.cpp  config_manager.h
central_unit/src/common/utils/logger/: async_logger.cpp  async_logger.h  async_logger.tpp  logger.cpp  logger.h  logger.tpp
central_unit/src/common/utils/service_manager/: service_manager.cpp  service_manager.h  standalone_service.cpp  standalone_service.h  systemd_service.cpp  systemd_service.h
central_unit/src/core/: CMakeLists.txt  cache.cpp  cache.h  core.cpp  core.h  core_actions.cpp  core_actions.h  main.cpp  main.h  scheduler.cpp  scheduler.h
central_unit/src/core/actions/: action_helpers.cpp  action_helpers.h  actions.cpp  actions.h  core_actions.cpp  core_actions.h  database_actions.cpp  database_actions.h  mediator_actions.cpp  mediator_actions.h
central_unit/src/core/api/: internal_api.cpp  internal_api.h
central_unit/src/core/service/: service_manager.cpp  service_manager.h  standalone_service.cpp  standalone_service.h  systemd_service.cpp  systemd_service.h
central_unit/src/db-service/: CMakeLists.txt  database_api.cpp  database_api.h  database_client.cpp  database_client.h  database_connection.cpp  database_connection.h  database_connection_manager.cpp  database_connection_manager.h  database_service.cpp  database_service.h  main.cpp  main.h
central_unit/src/gui/: CMakeLists.txt  api_client.cpp  api_client.h  gui.cpp  gui.h  main.cpp  main.h
central_unit/src/gui/qml/: Main.qml
central_unit/src/gui/qml/components/: CustomTabButton.qml  DialogButton.qml  SettingsButton.qml  qmldir
central_unit/src/gui/qml/pages/: HomePage.qml  ModuleDetailPage.qml  SettingsPage.qml  StatusPage.qml  qmldir
central_unit/src/ipc/: smart_home_tcp_connection.cpp  smart_home_tcp_connection.h  smart_home_tcp_server.cpp  smart_home_tcp_server.h
central_unit/src/mediator/: CMakeLists.txt  Transmission.cpp  Transmission.h  api_client.cpp  api_client.h  main.cpp  main.h  mediator.cpp  mediator.h  rf_api.cpp  rf_api.h  rf_client.cpp  rf_client.h  rf_types.cpp  rf_types.h  session.cpp  session.h
central_unit/src/mediator/api/: api_client.cpp  api_client.h  rf_api.cpp  rf_api.h
central_unit/src/mediator/rf_api/: rf_api.cpp  rf_api.h  rf_client.cpp  rf_client.h  rf_types.cpp  rf_types.h  rf_types.tpp
central_unit/src/mediator/rf_driver/: gpio_handler.cpp  gpio_handler.h  hc12_driver.cpp  hc12_driver.h  rf_driver.h  uart_port.cpp  uart_port.h
central_unit/src/web_server/: CMakeLists.txt  api_client.cpp  api_client.h  main.cpp  main.h  web_server.cpp  web_server.h
central_unit/src/web_server/routes/: actuator_routes.cpp  actuator_routes.h  core_routes.cpp  core_routes.h  database_routes.cpp  database_routes.h  devices_routes.cpp  devices_routes.h  module_routes.cpp  module_routes.h  route_helpers.cpp  route_helpers.h  routes.cpp  routes.h  sensor_routes.cpp  sensor_routes.h  static_routes.cpp  static_routes.h
central_unit/systemd/: smarthomed.service
modules/: .env.example  .gitignore  get_env.py  platformio.ini
modules/config/: addressing_config.h  communication_config.h  logger_config.h  ota_config.h  universal_module_system_config.h
modules/config/common/: basic_esp32_s3_wroom_config.h  basic_esp32_wroom_config.h  basic_esp32_yd_config.h  freertos_common_config.h  hc12_common_config.h  smart_home_config.h
modules/config/system_config/: addressing_config.h  communication_config.h  development_config.h
modules/config/system_config/common/: basic_esp32_s3_config.h  hc12_common_config.h  (+3 more)
modules/config/user_config/: critical_config.h  optional_config.h
modules/data/: base_config.json
modules/data/root/: base_config.json
modules/docs/: namespaces.h
modules/src/: main.cpp  smart_home_config.h
modules/src/communication/: communication.cpp  communication.h  hc12.cpp  hc12.h  uint8_array_handlers.cpp  uint8_array_handlers.h
modules/src/config/: addressing_config.h  basic_esp32_s3_wroom_config.h  basic_esp32_wroom_config.h  basic_esp32_yd_config.h  communication_config.h  freertos_config.h  hc12_common_config.h  univarsal_module_system_config.h
modules/src/docs/: namespaces.h
modules/src/universal_module_system/: data_manager.cpp  data_manager.h  debug_led.cpp  debug_led.h  pairing_button.cpp  pairing_button.h  power_management.cpp  power_management.h  power_manager.cpp  power_manager.h
modules/src/utils/: logger.cpp  logger.h  uint8_array_handlers.cpp  uint8_array_handlers.h
modules/templates/: acurators_data_template.json  cental_unit_base_config_template.json  minimum_template.json  module_base_config_template.json  sensor_data_template.json
modules/templates/examples/: module_bme.json  module_relay.json  module_window.json
(+61 files in other folders)
